<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:paddingStart="@dimen/list_padding"
    android:paddingEnd="@dimen/list_padding"
    android:layout_marginBottom="1dp"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:id="@+id/newsType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/colorWhite"
            >

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/news_title"
                android:textSize="@dimen/news_text_title_size"
                android:textColor="@color/colorBlackPrimary"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/newsImage"
                android:gravity="start"/>

            <TextView
                android:id="@+id/newsAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_author"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/news_text_description_size"
                android:layout_below="@id/newsTitle"
                android:gravity="start"/>

            <TextView
                android:id="@+id/newsViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/news_views"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/news_text_description_size"
                android:layout_below="@id/newsTitle"
                android:layout_toEndOf="@id/newsAuthor"/>

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="96dp"
                android:layout_height="72dp"
                android:layout_marginStart="4dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/news_pic_description"
                android:src="@drawable/ic_pic_blank"/>

        </RelativeLayout>

    </LinearLayout>
